AED-24 Added project endpoints
